# csv-pdf-converter

./: README.md  pyproject.toml  requirements.txt
src/: sample.csv
src/pdf_demo/: __init__.py  cli.py  data_processing.py  io_utils.py  pdf_renderer.py
src/pdf_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
